Hacker News & Revised

--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -5,237 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>餐廳官網</title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
-        body {
-            font-family: "Questrial", "Microsoft JhengHei", sans-serif;
-        }
-        .navbar{
-            background: white;
-            box-shadow: -1.4px -1.4px 6px 0 #97a2a0;
-        }
-        .wrapper{
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-        .navbar .wrapper{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-        }
-        .nav_brand{
-            color: #489846;
-            font-size: 36px;
-            line-height: 44px;
-        }
-        .nav_menu{
-            list-style: none;
-            display: flex;
-            font-size: 18px;
-        }
-        .nav_menu li{
-            margin-left: 12px;
-        }
-        .nav_menu a{
-            display: block;
-            padding: 14px 25px;
-            border-radius: 8px;
-            text-decoration: none;
-            color: black;
-        }
-        .nav_menu a:hover, .active a{
-            color: white;
-            background-color: #ff7286;
-            transition: all 0.5s ease-in-out;
-        }
-        .banner{
-            position: relative;
-            height: 580px;
-            background: url(img/2.png) center/cover no-repeat;
-        }
-        .banner:after{
-            content: '';
-            position: absolute;
-            background: rgba(0, 0, 0, 0.5);
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
-        .banner h1{
-            color: white;
-            font-size: 60px;
-            font-weight: bold;
-            text-align: center;
-            position: relative;
-            top: 50%;
-            transform: translate(0, -50%);
-            z-index: 2;
-        }
-        .part{
-            text-align: center;
-            margin: 80px 0 40px;
-        }
-        .part h2{
-            display: inline-block;
-            font-size: 36px;
-            font-weight: bold;
-            padding-left: 16px;
-            border-left: 15px solid #a3dea2;
-            margin-bottom: 40px;
-        }
-        .part p{
-            font-size: 16px;
-            line-height: 26px;
-        }
-        .part p ~ p{
-            margin-top: 10px;
-        }
-        .intro p:last-of-type{
-            margin-bottom: 80px;
-        }
-        .buttons{
-            margin: 80px 0 40px;
-        }
-        .buttons button{
-            font-family: inherit;
-            width: 300px;
-            height: 160px;
-            border: none;
-            border-radius: 10px;
-            font-size: 36px;
-            font-weight: bold;
-            color: #3e613d;
-            outline: none;
-        }
-        .buttons button ~ button{
-            margin-left: 20px;
-        }
-        .buttons button:hover{
-            transform: scale(1.1);
-            transition: all 0.5s ease-in-out;
-            cursor: pointer;
-        }
-        .btn_order{
-            background: #a8e8e1;
-        }
-        .btn_list{
-            background: #f9f9b5;
-        }
-        .menu_img{
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .menu_img img{
-            width: 25%;
-        }
-        .people{
-            display: flex;
-            justify-content: center;
-        }
-        .people .card{
-            position: relative;
-            border: 1px solid #c7e5ec;
-            border-radius: 5px;
-            box-shadow: -1.4px -1.4px 4px 0 #d8eaef;
-            padding: 0 25px 40px;
-            margin-top: 60px;
-            width: 32%;
-        }
-        .people .card ~ .card{
-            margin-left: 2%;
-        }
-        .card img{
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .card h3{
-            margin-top: 55px;
-            font-style: 16px;
-        }
-        .card p{
-            margin-top: 25px;
-        }
-        .footer_top{
-            background: #e8efee;
-        }
-        .footer_top .wrapper{
-            padding-top: 30px;
-            padding-bottom: 30px;
-            display: flex;
-            justify-content: space-between;
-        }
-        .footer_top .left{
-            padding-top: 4px;
-        }
-        .footer_top .right{
-            text-align: end;
-        }
-        .footer_top li{
-            font-size: 14px;
-            line-height: 30px;
-        }
-        .footer_bottom{
-            background: #35564b;
-        }
-        .footer_bottom{
-            padding: 10px 0;
-            line-height: 26px;
-            color: white;
-            text-align: center;
-        }
-        @media (max-width: 768px) {
-            .navbar .wrapper{
-                flex-direction: column;
-                padding: 10px 0 0;
-            }
-            .nav_menu{
-                width: 100%;
-            }
-            .nav_menu li{
-                margin: 0;
-                flex: 1;
-            }
-            .navbar a{
-                text-align: center;
-                border-radius: 0;
-            }
-            .buttons{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                margin: 40px 0;
-            }
-            .intro button ~ button{
-                margin-left: 0;
-                margin-top: 20px;
-            }
-            .menu_img img{
-                width: 100%;
-            }
-            .people{
-                flex-direction: column;
-                align-items: center;
-            }
-            .people .card{
-                width: 90%;
-            }
-            .people .card ~ .card{
-                margin-left: 0;
-                margin-top: 70px;
-            }
-            .footer_top .wrapper{
-                display: flex;
-                flex-direction: column-reverse;
-            }
-            .footer_top .right{
-                text-align: start;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
