--- a/homeworks/week6/hw2/index.html
+++ b/homeworks/week6/hw2/index.html
@@ -5,138 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新拖延運動報名表單 </title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-    <style>
-        *, *::before, *::after {
-            box-sizing: border-box;
-        }
-        body{
-            font-family: "Microsoft JhengHei" ,sans-serif;
-        }
-        main{
-            background: #f0f0f0;
-            padding: 20px 0;
-        }
-        .signup{
-            border-top: 6px solid #fad312;
-            max-width: 645px;
-            padding: 55px 40px 35px;
-            box-shadow: 1.8px 2.4px 5px 0px rgba(0, 0, 0, 0.3);
-            background-color: white;
-            margin: 0 auto;
-        }
-        .signup h1{
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 35px;
-        }
-        .signup ul{
-            margin-bottom: 20px;
-            font-size: 14px;
-            list-style: none;
-        }
-        .signup li ~ li{
-            margin-top: 10px;
-        }
-        .important{
-            color: #e74149;
-            font-size: 16px;
-            margin-bottom: 55px;
-        }
-        .signup h2{
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-        .header_required::after{
-            content: " *";
-            color: #e74149;
-        }
-        .signup input{
-            font-family: inherit;
-            font-size: 16px;
-            line-height: 24px;
-            color: #d0d0d0;
-            border: 1px solid #d0d0d0;
-            margin-bottom: 50px;
-            outline: none;
-        }
-        .signup input[type="text"], .signup input[type="email"]{
-            display: flex;
-            width: 300px;
-        }
-        .signup input:focus{
-            border: 1px solid #fad312;
-        }
-        .signup input[type="radio"]{
-            margin-bottom: 0;
-            cursor: pointer;
-        }
-        .signup input[type="radio"]:focus{
-            color: #000;
-        }
-        .radio label{
-            cursor: pointer;
-            font-size: 12px;
-            vertical-align: 10%;
-        }
-        .radio ~ .radio{
-            margin-top: 25px;
-        }
-        .radio:last-of-type{
-            margin-bottom: 50px;
-        }
-        .signup p{
-            font-size: 14px;
-        }
-        .with_description{
-            margin-bottom: 12px;
-        }
-        .with_description + p{
-            margin-bottom: 20px;
-        }
-        input[type=submit]{
-            display: block;
-            color: black;
-            font-size: 15px;
-            background-color: #fad312;
-            border: none;
-            border-radius: 3px;
-            padding: 14px 32px;
-            margin: 5px 0 20px;
-            cursor: pointer;
-        }
-        footer{
-            background-color: black;
-            color: #999999;
-            text-align: center;
-            padding: 24px;
-        }
-        @media (max-width: 660px){
-            .signup{
-                width: 380px;
-            }
-            .signup h1{
-                font-size: 32px;;
-            }
-        }
-        @media(max-width: 400px) {
-            .signup{
-                width: 300px;
-                padding: 40px 15px 40px 20px;
-            }
-            .signup h1{
-                font-size: 24px;
-            }
-            .signup ul{
-                font-size: 14px;
-            }
-            .signup input[type="text"], .signup input[type="email"]{
-                width: 260px;
-            }
-            footer{
-                font-size: 12px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
