--- a/homeworks/week6/Hacker_News/Hacker_News.html
+++ b/homeworks/week6/Hacker_News/Hacker_News.html
@@ -32,7 +32,7 @@
         <div class="container">
             <ol class="articles_list">
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -47,7 +47,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -62,7 +62,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -77,7 +77,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -92,7 +92,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -107,7 +107,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -122,7 +122,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -137,7 +137,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -152,7 +152,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -167,7 +167,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -182,7 +182,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -197,7 +197,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -212,7 +212,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -227,7 +227,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -242,7 +242,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -257,7 +257,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -272,7 +272,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -287,7 +287,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -302,7 +302,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -317,7 +317,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -332,7 +332,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -347,7 +347,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -362,7 +362,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -377,7 +377,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -392,7 +392,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -407,7 +407,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -422,7 +422,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -437,7 +437,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -452,7 +452,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
@@ -467,7 +467,7 @@
                     </article>
                 </li>
                 <li>
-                    <a href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"><div class="vote"></div></a>
+                    <a class="vote" href="https://news.ycombinator.com/vote?id=23960662&how=up&goto=news"></a>
                     <article>
                         <h3>
                             <a href="https://www.bleepingcomputer.com/news/security/new-meow-attack-has-deleted-almost-4-000-unsecured-databases/">New ‘Meow’ attack has deleted almost 4k unsecured databases</a>
