--- a/homeworks/week7/hw2/index.html
+++ b/homeworks/week7/hw2/index.html
@@ -1,1 +1,99 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>餐廳官網</title>
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="wrapper">
+            <h2 class="nav_brand">Just A Bite!</h2>
+            <ul class="nav_menu">
+                <li class="active"><a href="#">抽個大獎</a></li>
+                <li><a href="#">我要點餐</a></li>
+                <li><a href="#">查詢訂單</a></li>
+                <li><a href="#">常見問題</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="part faq">
+        <div class="wrapper">
+            <h2>FAQ - 常見問題</h2>
+            <ul>
+               <li>
+                   <span>Q1:</span>
+                   <article>
+                       <h3>如何辦理退貨？</h3>
+                       <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                   </article> 
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+                <li>
+                    <span>Q1:</span>
+                    <article>
+                        <h3>如何辦理退貨？</h3>
+                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                    </article>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <div class="footer_top">
+            <div class="wrapper">
+                <ul class="left">
+                    <li>餐館地址: 天上地下天堂路三分之一里六段520號</li>
+                    <li>訂位專線：02-1314-5566</li>
+                    <li>營業時間：週一〜週五 09:00~18:00 / 週六、週日、國定假日（含連假）休息</li>
+                    <li>email：service@justabite.com.tw</li>
+                </ul>
+                <ul class="right">
+                    <h2 class="nav_brand">Just A Bite!</h2>
+                    <li>Facebook / Instagram / Youtube</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer_bottom">
+            <p>Copyright © 2020 Just A Bite All Rights Reserved. 咬一口股份有限公司版權所有</p>
+        </div>
+    </footer>
+    <script src="faqShow.js"></script>
+</body>
+</html>
