--- a/homeworks/week7/hw2/index.html
+++ b/homeworks/week7/hw2/index.html
@@ -23,53 +23,53 @@
         <div class="wrapper">
             <h2>FAQ - 常見問題</h2>
             <ul>
-               <li>
+               <li class="faq_item">
                    <span>Q1:</span>
                    <article>
                        <h3>如何辦理退貨？</h3>
-                       <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                       <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                    </article> 
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
-                <li>
+                <li class="faq_item">
                     <span>Q1:</span>
                     <article>
                         <h3>如何辦理退貨？</h3>
-                        <p>線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
+                        <p class="faq_a">線上刷卡的使用方式也超簡單，只要您確認您當次的購物清單與金額都無誤，就可立即到匯款上傳系統，登入個人帳號密碼後，點選"線上刷卡方式"，確認收件住址後，再進行刷卡確認程序即可～</p>
                     </article>
                 </li>
             </ul>
