week3 hw3 revised

--- a/homeworks/week7/hw3/index.html
+++ b/homeworks/week7/hw3/index.html
@@ -6,12 +6,13 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="todo">
         <h2>Todo List</h2>
         <ul>   
-            <li class="task">
+            <li>
                 <input type="text" name="task" id="task" placeholder="Add Something">
             </li>
         </ul>
