--- a/homeworks/week12/hw2/todo.html
+++ b/homeworks/week12/hw2/todo.html
@@ -29,7 +29,7 @@
                     <span class="badge badge-light">0</span>
                 </label>
                 <label class="btn btn-outline-secondary">
-                    <input type="radio" name="options" id="undone" autocomplete="off" value="undone""> Undone
+                    <input type="radio" name="options" id="undone" autocomplete="off" value="undone"> Undone
                     <span class="badge badge-light">0</span>
                 </label>
             </div>
